apps/alerta/alerta/networkpolicies/alerta-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: alerta-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'alerta'
        selector: >-
          app == 'alerta' &&
          component == 'alerta'
        ports:
          - 8080
